@@ -7,33 +7,32 @@ public class Cola<T> implements Serializable{
 	LinkedList<T> list = new LinkedList<T>();
 	
 	public T dequeue(){
-	  if (list.size() > 0 )
-		return list.removeFirst();
-	  else
-	    return null;
-	
+		  if (list.size() > 0 ){
+				return list.removeFirst();
+		    }
+		  return null; 
 	}
 	public T getLast(){
-	  return list.get(list.size()-1);
+	    return list.getLast();
 	}
 	
 	public int size(){
-	  return list.size();
+		return list.size();
 	}
 	
 	public T get(int n){
-	  return list.get(n);
+		return list.get(n);
 	}
 	
 	public void enqueue(T e){
-	   list.addLast(e);
+		list.addLast(e);
 	}
 
 	public String toString(){
-	   StringBuilder s = new StringBuilder();
-	   for( Object o : list ){
-	     s.append(o + "\n");
-	   }
-	   return s.toString();
+		StringBuilder s = new StringBuilder();
+		for( Object o : list ){
+			s.append(o + "\n");
+		}
+		return s.toString();
 	}
 }
